fable/test/valid/save_0.f
      program prog
      save
      write(6, *) num
      end
