fable/test/semantic_error/equivalence_external.f
      program prog
      external ne
      equivalence (ne, nl)
      end
